<resources>
    <string name="app_name">FOLIYOO</string>
    <string name="login">

Login
</string>

    <string name="enter_regis">

Enter Registered Mobile No.
</string>

    <string name="you_will_re">

You will receive a verification code on your regestered mobile number
</string>

    <string name="enter_verif">

Enter Verification Code
</string>

    <string name="enter_6_di">

Enter 6 digit verification\n code sent
</string>

    <string name="dont_receiv">

Dont Receive the Code?
</string>

    <string name="resend_now">

Resend Now
</string>


    <string name="signup">

Sign Up
</string>
    <string name="forgot_pass">

Forgot Password?
</string>

    <string name="dont_have_a">
        Dont have an account?
</string>

    <string name="sign_up">

Sign Up
</string>

    <string name="set_new_pas">

Set New Password
</string>
    <string name="foliyoodriver">

FOLIYOO DRIVER
</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="open">Open</string>

    <string name="close">Close</string>

    <string name="booking_id_">

Booking ID : VMS15820
</string>
    <string name="version_1_0">Version: 1.0.1 (Build Number: 12)</string>
    <string name="revision_nu">Revision Number: %1$S</string>
    <string name="copyright">Copyright 2020 - Foliyoo Technologies</string>
    <string name="book_your_v">Book your vehicles anywhere, anytime...</string>
    <string name="contact_us">Contact Us</string>
    <string name="e_mail">E-mail  :</string>
    <string name="phone_no">Phone No:</string>
    <string name="e_mail_supp">support@foliyoo.com</string>
    <string name="mobile_number">+91 637 050 3705</string>
    <string name="find_us_onl">Find Us Online</string>
    <string name="address">Address</string>
    <string name="foliyoo_tec">Foliyoo Technilogies Pvt. Ltd. 108-A, KIIT-TBI,\ncampus-11, KIIT, Patia, Bhubaneswar, Odisha, India</string>
    <string name="am">

22-06-2019\n10.15 am
</string>

    <string name="pm">

22-06-2019\n4.00 pm
</string>

    <string name="chooser_title">Share</string>
    <string name="invite_friends">Invite friends,get up to Rs 50.00/-</string>
    <string name="you_and_your">You and your friend will each get Rs 50.00</string>
</resources>
